Fixed wrong positioning of life expectancy map

--- a/app/stylus/areas/expectancy-area.styl
+++ b/app/stylus/areas/expectancy-area.styl
@@ -1,34 +1,37 @@
 .expectancy-area
-  height 900px
-  .country-selection
-    margin 10px 0
-    padding 10px 40px 10px 0
-    box-sizing border-box
-    float left
-    border-right 1px solid border-color
-    .icon,
-    .typeahead,
-    label
-      display inline-block
-      margin-right 20px
-    .typeahead:last-child
-      margin 0
-    label
-      color p-color
-      font-size 14px
-    .icon
-      border-radius 20px
-      height 40px
-      width 40px
-      line-height 40px
-      vertical-align middle
-      background-icon()
-      background-position -230px -630px
-  .time-slider
-    box-sizing border-box
-    float right
-    time-slider
-      position relative
-      left 8px
-      top 8px
+    height 900px
+    .toolbar
+        clearfix()
+        margin-bottom 50px
+        .country-selection
+            margin 10px 0
+            padding 10px 40px 10px 0
+            box-sizing border-box
+            float left
+            border-right 1px solid border-color
+            .icon,
+            .typeahead,
+            label
+                display inline-block
+                margin-right 20px
+            .typeahead:last-child
+                margin 0
+            label
+                color p-color
+                font-size 14px
+            .icon
+                border-radius 20px
+                height 40px
+                width 40px
+                line-height 40px
+                vertical-align middle
+                background-icon()
+                background-position -230px -630px
+        .time-slider
+            box-sizing border-box
+            float right
+            time-slider
+                position relative
+                left 8px
+                top 8px
 
